# Customer_analysis_AIproject

./: .gitignore  ACHIEVEMENTS.md  AI_MODEL_SPEC.md  API_PLUGIN_GUIDE.md  API_REFERENCE.md  ARCHITECTURE.md  AUDIT_TRAIL.md  BUISNESS_USECASES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATABASE_SCHEMA.md  DATA_PRIVACY_POLICY.md  DISCLAIMER.md  Dockerfile  ETHICAL_LICENSE.md  FEEDBACK_LOOP.md  GOVERNANCE.md  LICENSE  MODEL_CARD.md  MONITORING_GUIDE.md  Makefile  PROJECT_PITCH.md  README.md  SECURITY.md  SECURITY_GUIDELINES.md  SETUP_GUIDE.md  TESTING.md  TEST_PLAN.md  USE_CASES.md  check_dependencies.py  check_python.ps1  config.sample.json  config.yaml  docker-compose.monitoring.yml  fix_lint_issues.ps1  main.py  pyproject.toml  pytest.ini  requirements-roadmap.txt  (+7 more)
.github/: dependabot.yml
actions/: base.py  email.py  factory.py  notify_compliance.py  webhook.py  zendesk.py
agents/: action_agent.py  audit_agent.py  base.py  chat_agent.py  explanation_agent.py  flagging_agent.py  fraud_agent.py  insight_agent.py  kyc_agent.py  monitoring_agent.py
ai_governance/: drift_detection.py  model_validation.py  model_versioning.py
app/: api_routes.py  compliance.py  currency_cache.py  currency_exchange.py  data_augmentation.py  data_generator.py  fraud_evaluator.py  models.py
auth/: consent_logger.py  rbac_config.yaml
cache/: exchange_rates.json
cleanup/: removed_items_log.json
compliance/: audit_procedures.py  certification_process.py  compliance_checker.py  compliance_config.py  compliance_manager.py  compliance_reporting.py
config/: business_config_interface.py  config_manager.py  encryption_config.yaml  example_business_config.yaml  hsm_config.yaml  rbac_config.yaml  secrets_manager.py  security_monitor_config.yaml  system_config.py
configs/: default.yaml  providers.yaml
connectors/: mock_core_api.py
core/: agent_manager.py  auth.py  bias.py  cache.py  config_manager.py  drift_detector.py  env.py  error_handler.py  feature_registry.py  logging.py  metrics.py  model_provider.py  model_versioning.py  privacy.py  safety.py  validation.py  validators.py  verification.py
dashboard/: app.py
demo/: CHANGES_LOG.md  DEMO_DOCUMENTATION.md  DISCLAIMER.md  README.md  compliance_checks.py  flask_demo.py  region_thresholds.py  stakeholder_demo.py  stakeholder_demo_enhanced.py  streamlit_demo.py
docs/: API.md  ARCHITECTURE.md  COMPLIANCE_MAPPING.md  CONFIG_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT_TEMPLATE.md  DOCUMENTATION_GUIDE.md  FOUNDATION.md  Makefile  README.md  README.rst  ROBUSTNESS_ASSESSMENT.md  SETUP.md  compliance_guidelines.md  conf.py  data_generation.md  index.rst  openapi.json  sources.json  (+1 more)
(+123 files in other folders)
