[project]
name = "finconnectai"
version = "1.0.0"
description = "Enterprise-grade Financial Analytics and Connectivity AI System"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "Vikas Sahani", email = "vikassahani17@gmail.com"}
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest]
minversion = "6.0"
addopts = "-ra -q --cov=finconnectai"
testpaths = [
    "tests/real_world_tests",
]
